--- a/src/app/views/pages/business/business.component.html
+++ b/src/app/views/pages/business/business.component.html
@@ -212,10 +212,10 @@
                    
                   </div>
                     <p class="product-cat" style="margin-bottom: 5px;">
-                      Category: <span class="font-bold">Food</span> 
+                      Category: <span class="font-bold">{{product.category}}</span> 
                     </p>
                     <p class="product-user-lnk">
-                      By: <a href="#" class="font-bold">User</a> 
+                      By: <a href="#" class="font-bold">{{product.CreatedBy}}</a> 
                     </p>
                 </div>
               </div>
