--- a/src/app/views/base/create-business-profile/create-business-profile.component.css
+++ b/src/app/views/base/create-business-profile/create-business-profile.component.css
@@ -1,3 +1,3 @@
 .font-roboto {
-    font-family: "Roboto", sans-serif;
+  @import url('https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&display=swap');
   }
